Implement a simple API for deleting channels (not using the database yet)
